Opened 10 years ago
Closed 4 years ago
#11641 closed bug (fixed)
[DriveSetup] Partition->Change parameters doesn't open anything for raw devices
Reported by: | diver | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Applications/DriveSetup | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #16304 | |
Platform: | All |
Description
Selecting unmounted raw device and clicking Partition->Change parameters doesn't bring up any panels. Maybe it should be disabled?
Change History (4)
comment:1 by , 6 years ago
comment:2 by , 4 years ago
Milestone: | R1 → R1/beta3 |
---|
comment:3 by , 4 years ago
Blocking: | 16304 added |
---|
Note:
See TracTickets
for help on using tickets.
Now (hrev53233) it's the opposite, on raw devices it shows a panel and on anything else it doesn't do anything. However, on a linux swap partition it shows
Error: Initialization failed
alert.